--- a/index.html
+++ b/index.html
@@ -81,16 +81,15 @@
                 <input id="name" class="input-box" type="text" placeholder="姓名">
             </li>
             <li type="none">
-                <p><strong>教学系</strong></p>
-                <input id="name" class="input-box" type="text" placeholder="教学系">
-            </li>
-            <li type="none">
-                <p><strong>专业</strong></p>
-                <input id="name" class="input-box" type="text" placeholder="专业">
-            </li>
-            <li type="none">
                 <p><strong>班级</strong></p>
-                <input id="name" class="input-box" type="text" placeholder="班级">
+                <!--
+                <input id="class" class="input-box" type="text" placeholder="班级">
+                -->
+                <select id="class" class="input-box select">
+                    <option style="display: none;"></option>
+                    <option value="20-3">20-3</option>
+                    <option value="20-4">20-4</option>
+                </select>
             </li>
             <li type="none">
                 <p><strong>学号</strong></p>
