--- a/clbd.html
+++ b/clbd.html
@@ -25,21 +25,21 @@
                             <h4 style="white-space: normal;font-weight: bold; font-size: 14px;">学生请假审批表</h4>
                             <p>
                                 <span style="color: #3FB0FB;text-decoration: underline;"><span
-                                        id="name1">柳皓翔</span></span>
+                                        id="name1"></span></span>
                                 <span>&nbsp;<span id="requesttime">2021-11-11 10:35</span></span>
                             </p>
                             <p>学号: <span id="studentnumber">200860402</span></p>
-                            <p>姓名: <span id="name2">柳皓翔</span></p>
-                            <p>教学系: 信息工程系</p>
-                            <p>专业: 影视动画(士官)</p>
-                            <p>班级: <span id="class">影视动画20-4</span></p>
-                            <p>联系电话: <span id="phonenumber">17609871124</span></p>
+                            <p>姓名: <span id="name2"></span></p>
+                            <p>教学系: </p>
+                            <p>专业: </p>
+                            <p>班级: <span id="class"></span></p>
+                            <p>联系电话: <span id="phonenumber"></span></p>
                             <p>请假天数: <span id="day">0.3</span></p>
                             <p>开始时间: <span id="stime">2021-11-11 12:00:00</span></p>
                             <p>结束时间: <span id="edtime">2021-11-11 20:00:00</span></p>
                             <p>请假原因: <psan id="reason">病假</psan>
                             </p>
-                            <p>请假详细情况: <span id="details">感冒了 头疼</span></p>
+                            <p>请假详细情况: <span id="details"></span></p>
                             <p>请假所在位置: 辽宁省,沈阳市,沈北新区,站前街</p>
                             <p style="display:none;-webkit-line-clamp: 10;"></p>
                         </div>
@@ -73,7 +73,7 @@
                     border-radius: 50%;
                     vertical-align: top;">
                         <a id="teacher" href="">
-                            郜家宏
+                            
                         </a>
                         <a class="button_1" href="" style="color: white;">回复</a>
                     </div>
