--- a/formPreview.html
+++ b/formPreview.html
@@ -235,7 +235,7 @@
                                 <div id="FDYYJ" style="height:auto;text-align: left;padding: 15px 25px; ">
                                     <div style="min-height: 35px; line-height: 35px;overflow: hidden;clear: both;">
                                         <span style="display:inline-block;height:35px;">
-                                            郜家宏
+                                            导员姓名
                                         </span>
                                         <span id="1passtime" style="display:inline-block;height:35px;padding-left: 10px;">
                                             <!--2021年10月29日-->
@@ -254,7 +254,7 @@
                                 <div id="HT484DDD" style="height:auto;text-align: left; /*padding: 15px 25px;*/">
                                     <div style=" line-height: 35px;overflow: hidden;">
                                         <span id="2p" style="display:none;height:35px;">
-                                            李闯
+                                            系副书记姓名
                                         </span>
                                         <span id="2passtime" style="display:none;height:35px;padding-left: 10px;">
                                             <!--2021年10月29日-->
